<?xml version="1.0"?>
<package>
  <name>hls_lfom_tof_driver</name>
  <version>1.0.0</version>
  <description>ROS package for HLDS(Hitachi-LG Data Storage,Inc.) HLS-LFOM 3D LiDAR(TOF)</description>

  <license>BSD</license>

  <author email="jhyang@hlds.co.kr">Jeehoon Yang</author>
  <author email="wayne.rust@educatedrobot.com">Wayne Rust</author>
  <maintainer email="jhyang@hlds.co.kr">Jeehoon Yang</maintainer>

  <url type="website">http://wiki.ros.org/hls_lfom_tof_driver</url>
  <url type="bugtracker">https://github.com/HLDS-GIT/hls_lfom_tof_driver/issues</url>
  <url type="repository">https://github.com/HLDS-GIT/hls_lfom_tof_driver</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
